--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -1,5 +1,14 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
+{% block meta_tags %}
+
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 
 {% block title %} Projects | Hack For Change {% endblock %}
 
@@ -9,7 +18,7 @@
         <div class="content-width sm-content-width">
             <div class="banner__main">
                 <h1>Projects</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+                <p class="large">Ongoing solutions designed and developed to empower citizens</p>
             </div>
         </div>
 </div>
