--- a/templates/andablog/entry_list.html
+++ b/templates/andablog/entry_list.html
@@ -1,5 +1,13 @@
 {% extends "andablog/base.html" %}
 {% load static % }
+{% block meta_tags %}
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% load andablog_tags %}
 {% block main %}
 <!--Banner start -->
