--- a/templates/HFC/donate.html
+++ b/templates/HFC/donate.html
@@ -1,5 +1,14 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
+{% block meta_tags %}
+
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% block title %} Donate | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
@@ -7,7 +16,7 @@
         <div class="content-width sm-content-width">
             <div class="banner__main banner__main--upper banner__main--donate">
                 <h1>Make a Donation</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+                <p class="large"> Help us sustain the development and adoption of solutions built by the HFC community</p>
             </div>
         </div>
 </div>
