--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -1,5 +1,14 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
+{% block meta_tags %}
+
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% block title %} Mentor Signup | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
@@ -7,16 +16,17 @@
     <div class="content-width sm-content-width">
         <div class="banner__main">
             <h1>Signup as a Mentor</h1>
-            <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+            <p class="large"> Inviting technology leaders with hands-on sofware engineering expertise to adopt a project and guide our community of coders
+                </p>
         </div>
     </div>
 </div>
 <!--Banner end -->
 <!--main start -->
 <div id="main-wrap" class="main__large-pd">
-	<div class="content-width">
+    <div class="content-width">
         <div class="main">
-        	<section id="contents">
+            <section id="contents">
                 <div class="leader-skill-sec">
                     <div class="leader-skill__left">
                         <p class="large bold">Must Have Skills</p>
@@ -32,161 +42,148 @@
                         <img src="{% static 'images/undraw_candidate_ubwv.svg' %}" srcset="images/undraw_candidate_ubwv@2x.png 2x, images/undraw_candidate_ubwv@3x.png 3x">
                     </div>
                 </div>
-                <form  class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}" >
-                        {%csrf_token%}
-                        <div class="form-control">
-                            <div class="form-field">
-                                <label for="">Full Name</label>
-                                    {{form.name}}
-                            </div>    
-                            <div class="form-field">
-                                <label for="">Email</label>
-                                    {{form.email}}   
+                <form class="site-form" method="post" id="volform" sub-change-url="{% url 'load_area_of_expertise' %}">
+                    {%csrf_token%}
+                    <div class="form-control">
+                        <div class="form-field">
+                            <label for="">Full Name</label>
+                            {{form.name}}
+                        </div>
+                        <div class="form-field">
+                            <label for="">Email</label>
+                            {{form.email}}
+                        </div>
+                    </div>
+                    <div class="form-control">
+                        <div class="form-field">
+                            <label for="">Contact Number</label>
+                            {{form.contact_number}}
+                        </div>
+                        <div class="form-field">
+                            <label for="">Date of Birth</label>
+
+                            {{form.dob}}
+
+
+                        </div>
+                    </div>
+                    <div class="form-control">
+                        <div class="form-field">
+                            <label for="">Gender</label>
+                            <div class="form-field__select">
+                                {{form.gender}}
+                                <i class="fas fa-chevron-down"></i>
                             </div>
                         </div>
-                        <div class="form-control">
-                                <div class="form-field">
-                                    <label for="">Contact Number</label>
-                                        {{form.contact_number}} 
-                                </div>
-                                <div class="form-field">
-                                    <label for="">Date of Birth</label>
-                                    
-                                        {{form.dob}}
-                                     
-                                    
-                                </div>
+                        <div class="form-field">
+                            <label for="">LinkedIn Profile</label>
+                            {{form.linkedin_profile}}
                         </div>
-                        <div class="form-control">
-                                <div class="form-field">
-                                    <label for="">Gender</label>
-                                    <div class="form-field__select">
-                                        {{form.gender}}
-                                        <i class="fas fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                                <div class="form-field">
-                                    <label for="">LinkedIn Profile</label>
-                                    {{form.linkedin_profile}}
-                                </div>
+                    </div>
+                    <div class="form-control">
+                        <div class="form-field">
+                            <label for="">GitHub Profile</label>
+                            {{form.coder_profile}}
                         </div>
-                        <div class="form-control">
-                                <div class="form-field">
-                                    <label for="">GitHub Profile</label>
-                                    {{form.coder_profile}}
-                                </div>
-                                <div class="form-field">
-                                    <label for="">Highest Education</label>
-                                    <div class="form-field__select">
-                                        {{form.highest_education}}
-                                        <i class="fas fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                        </div>
-                        <div class="form-control">
-                                <div class="form-field">
-                                    <label for="">Profession</label>
-                                    <div class="form-field__select">
-                                    {{form.profession}}
-                                    <i class="fas fa-chevron-down"></i>
-                                    </div>
-                                </div>
-                                <div class="form-field">
-                                    <label for="">Years of Experience</label>
-                                    <div class="form-field__select">
-                                        {{form.years_of_experience}}
-                                        <i class="fas fa-chevron-down"></i>
-                                    </div>
-                                </div>
+                        <div class="form-field">
+                            <label for="">Highest Education</label>
+                            <div class="form-field__select">
+                                {{form.highest_education}}
+                                <i class="fas fa-chevron-down"></i>
                             </div>
-                        <div class="form-control">
-                            
-                                <label for="" style="padding-left:20px;"><b>Area of Expertise</b></label>
-                                <div style ="margin-left:-120px;padding-top:50px;width: 200px;">
-                                {{form.area_of_expertise}}
-                                </div>
-                            
                         </div>
-                        
-                        <div class="btn-outer">
-                            <input class="btn btn--info btn--full" type="submit" value="Register">
+                    </div>
+                    <div class="form-control">
+                        <div class="form-field">
+                            <label for="">Profession</label>
+                            <div class="form-field__select">
+                                {{form.profession}}
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
                         </div>
-                        
+                        <div class="form-field">
+                            <label for="">Years of Experience</label>
+                            <div class="form-field__select">
+                                {{form.years_of_experience}}
+                                <i class="fas fa-chevron-down"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-control">
+
+                        <label for="" style="padding-left:20px;"><b>Area of Expertise</b></label>
+                        <div style="margin-left:-120px;padding-top:50px;width: 200px;">
+                            {{form.area_of_expertise}}
+                        </div>
+
+                    </div>
+
+                    <div class="btn-outer">
+                        <input class="btn btn--info btn--full" type="submit" value="Register">
+                    </div>
+
                 </form>
-            </section><!--contents -->
+            </section>
+            <!--contents -->
             <aside id="sidebar">
                 <div class="sidebar__member-sec">
                     <p class="sbold">Our Top Mentors</p>
                     <ul class="sidebar__member">
                         {% for mentor in mentors%}
                         {% if mentor.image %}
-                        <li><img src= {{mentor.image.url}} alt="Pic"></li>
+                        <li><img src={{mentor.image.url}} alt="Pic"></li>
                         {% endif %}
                         {%endfor%}
                     </ul>
                 </div>
                 <div class="newsletter">
                     <div class="newsletter__fig"><img src="{% static 'images/news-update.png' %}" alt="Image"></div>
-                    <form action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04" method="post"  target="_blank"  id="mc-embedded-subscribe-form" class="newsletter__form" novalidate>
+                    <form action="https://ctsc-india.us7.list-manage.com/subscribe/post?u=1a02ab21f5eb63b797a40e347&amp;id=72baea4f04"
+                        method="post" target="_blank" id="mc-embedded-subscribe-form" class="newsletter__form"
+                        novalidate>
                         <p class="large bold">Get Latest Updates!</p>
-                        <input type="email" placeholder="Enter your email" name= "EMAIL" id="mce-EMAIL">
-                        <input class="btn btn--info" type="submit"  value="Subscribe">
+                        <input type="email" placeholder="Enter your email" name="EMAIL" id="mce-EMAIL">
+                        <input class="btn btn--info" type="submit" value="Subscribe">
                         <div id="mce-responses" class="clear">
-                                <div class="response" id="mce-error-response" style="display:none"></div>
-                                <div class="response" id="mce-success-response" style="display:none"></div>
-                            </div>
-                        </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-                        <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04" tabindex="-1" value=""></div>
+                            <div class="response" id="mce-error-response" style="display:none"></div>
+                            <div class="response" id="mce-success-response" style="display:none"></div>
                         </div>
-                    </form>
                 </div>
-            </aside><!--sidebar -->
-            </div>
+                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1a02ab21f5eb63b797a40e347_72baea4f04"
+                        tabindex="-1" value=""></div>
         </div>
+        </form>
     </div>
-        
-        {%endblock%}
-        {% block js %}
-        <script>
-            $("#id_profession").change(function(){
-            var url=$("#volform").attr("sub-change-url");
-            console.log(url)
-            
-            var expertise_area_id=$(this).val();
-            
-            $.ajax({
-                url:url,
-                data:{
-                'profession':expertise_area_id
-                },
-                success:function(data){
+    </aside>
+    <!--sidebar -->
+</div>
+</div>
+</div>
+
+{%endblock%}
+{% block js %}
+<script>
+    $("#id_profession").change(function () {
+        var url = $("#volform").attr("sub-change-url");
+        console.log(url)
+
+        var expertise_area_id = $(this).val();
+
+        $.ajax({
+            url: url,
+            data: {
+                'profession': expertise_area_id
+            },
+            success: function (data) {
                 $("#id_area_of_expertise").html(data);
                 console.log(data)
-                }
-                });
-                });
-                </script>
-        
-       
-        <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
-        {%endblock%}
-        
-
-                                
+            }
+        });
+    });
+</script>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+<script type='text/javascript'>(function ($) { window.fnames = new Array(); window.ftypes = new Array(); fnames[0] = 'EMAIL'; ftypes[0] = 'email'; fnames[1] = 'FNAME'; ftypes[1] = 'text'; fnames[2] = 'LNAME'; ftypes[2] = 'text'; fnames[3] = 'ADDRESS'; ftypes[3] = 'address'; fnames[4] = 'PHONE'; ftypes[4] = 'phone'; fnames[5] = 'BIRTHDAY'; ftypes[5] = 'birthday'; }(jQuery)); var $mcj = jQuery.noConflict(true);</script>
+{%endblock%}
