--- a/templates/HFC/problem_statements_submit.html
+++ b/templates/HFC/problem_statements_submit.html
@@ -1,5 +1,14 @@
 {% extends 'HFC/layout.html'%}
 {% load static %}
+{% block meta_tags %}
+
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% block title %} Suggest Problem Statement | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
@@ -7,7 +16,7 @@
         <div class="content-width sm-content-width">
             <div class="banner__main">
                 <h1>Suggest a Problem Statement</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing sed do eiusmod tempor incididunt ut labore</p>
+                <p class="large">Suggest any problem statements in the areas of governance, civic engagement, social enterprise and disaster management</p>
             </div>
         </div>
 </div>
