--- a/templates/HFC/thanks.html
+++ b/templates/HFC/thanks.html
@@ -1,5 +1,14 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
+{% block meta_tags %}
+
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article" >    
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% block title %} Thanks | Hack For Change {% endblock %}
 {% block main %}
 <!-- Main starts -->
