--- a/templates/andablog/base.html
+++ b/templates/andablog/base.html
@@ -1,7 +1,7 @@
 {% extends "HFC/layout.html" %}
 {% load static %}
 {% block title %}Blog | Hack For Change{% endblock %}
-
+{% block meta_tags %}{% endblock %}
 {% block subtitle %}
     {% block andablog_page_title %}
     {% endblock %}
