--- a/templates/HFC/footer.html
+++ b/templates/HFC/footer.html
@@ -14,13 +14,14 @@
                 <input type="email" placeholder="Enter your email" value="" name="EMAIL" id="mce-EMAIL" >
                 <input type="submit" value="Subscribe" id="mc-embedded-subscribe">
             </form>
-            <div id="thankYouMessage" style="display:none;">
-                <p>Thank you for subscribing!</p>
-            </div>
+            
             <iframe name="formaReturning" style="display:none !important;" frameborder="0"></iframe>
             <!--End mc_embed_signup-->
-</div>
-</div>
+        </div>
+    </div>
+    <div id="thankYouMessage" style="display:none;margin-left:400px;">
+        <p>Thank you for subscribing!</p>
+    </div>
 </div>
 
 <div id="footer-wrap">
