--- a/templates/HFC/mentor_signup.html
+++ b/templates/HFC/mentor_signup.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article" >    
-<meta property="og:image" content="">
+<meta property="og:image" content="http://www.hackforchange.co/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
 {% block title %} Mentor Signup | Hack For Change {% endblock %}
