--- a/templates/HFC/projects_list.html
+++ b/templates/HFC/projects_list.html
@@ -6,7 +6,7 @@
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article" >    
-<meta property="og:image" content="">
+<meta property="og:image" content="https://www.hackforchange.co/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
 
