--- a/templates/andablog/entry_list.html
+++ b/templates/andablog/entry_list.html
@@ -5,7 +5,7 @@
 <meta property="og:title" content="">
 <meta name="description" property="og:description" content="">
 <meta property="og:type" content="article" >    
-<meta property="og:image" content="">
+<meta property="og:image" content="https://www.hackforchange.co/static/images/hfc.png">
 <meta property="og:url" content="">
 {% endblock %}
 {% load andablog_tags %}
@@ -15,8 +15,7 @@
         <div class="content-width sm-content-width">
             <div class="banner__main">
                 <h1>Our Latest Updates</h1>
-                <p class="large">Lorem ipsum dolor sit amet, consectetur adipiscing
-                sed do eiusmod tempor incididunt ut labore</p>
+                <p class="large">Stay tuned to the latest news from our core team, community and partners</p>
             </div>
         </div>
     </div>
