--- a/templates/HFC/community.html
+++ b/templates/HFC/community.html
@@ -1,5 +1,13 @@
 {% extends 'HFC/layout.html' %}
 {% load static %}
+{% block meta_tags %}
+<meta content="" name="keywords">
+<meta property="og:title" content="">
+<meta name="description" property="og:description" content="">
+<meta property="og:type" content="article">
+<meta property="og:image" content="">
+<meta property="og:url" content="">
+{% endblock %}
 {% block title %} Community | Hack For Change {% endblock %}
 {% block main %}
 <!--Banner start -->
@@ -7,9 +15,7 @@
     <div class="content-width sm-content-width">
         <div class="banner__main banner__main--upper banner__main--community">
             <h1>Community</h1>
-            <p class="large">
-                Our community of contributors across various colleges and cities
-            </p>
+            <p class="large">Our community of contributors across various colleges and cities</p>
         </div>
     </div>
 </div>
@@ -148,5 +154,19 @@
 </style>
 
 {% endblock %}
+
 {% block js %}
+<script type="text/javascript">
+    jQuery(document).ready(function ($) {
+        if (window.location.hash) {
+            if ($(window.location.hash).length > 0) {
+                $('.tab-sec li').removeClass('active');
+                $('a[href="' + window.location.hash + '"]').parent().addClass('active');
+
+                $('.hfc-outer section').removeClass('active');
+                $(window.location.hash).addClass('active');
+            }
+        }
+    });
+</script>
 {% endblock %}
